# curator-experiments

./: .gitignore  pyproject.toml
curation_testing/: solved_tasks.py
curation_testing/gdc/: api.yaml  facets.txt  prebaked.py
curator_experiments/: experiment1.py
curator_experiments/cbioportal/: api_no_examples.yaml  api_with_examples.yaml  cbioportal.json  examples.md  examples_(reference_solution).md
curator_experiments/experiments/: analysis.py  analysis_utils.py  cbio_analysis.py  cbio_cases.py  cbio_reference_solution.py  gdc_analysis.py  gdc_cases.py  run_trials.py  step2.py  step3.py  step_2_cases.py  step_3_cases.py  step_4_cases.py  utils.py
curator_experiments/gdc/: api_no_examples.yaml  api_with_examples.yaml  api_with_reference_solution_as_single_example.yaml  api_with_single_similar_example.yaml  examples.md  examples_(including_reference_and_others).md  examples_(reference_solution).md  examples_(single_similar_example).md  examples_(too_many).md  gdc.md  gdc_mappings.json
experiments/: step1.py
