[project]
name = "curator-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "David Samson",email = "david.andrew.engineer@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "archytas (>=1.3.11,<2.0.0)",
    "easyrepl (>=0.1.5,<0.2.0)",
    "adhoc-api (>=1.0.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
